# openip

./: README.md
openip/src/: CMakeLists.txt
openip/src/apps/: CMakeLists.txt
openip/src/apps/templateMatching/: CMakeLists.txt  gaborTests.pro
openip/src/apps/templateMatching/src/: templateMatching.cc
openip/src/lib/openipIO/openipIO/: pngIO.h
openip/src/lib/openipML/openipML/: DissimilarityFunctions.h  SimilarityFunction.h
