CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PACKAGE_NAME templateMatching)

INCLUDE_DIRECTORIES(. 
		    ${GSL_INCLUDE_DIR}
		    ${IMAGEIO_INCLUDE_DIRS}
		    ${OPENIP_LIB_INCLUDE_DIR}/openipDS/ 
		    ${OPENIP_LIB_INCLUDE_DIR}/openipSC/ 
		    ${OPENIP_LIB_INCLUDE_DIR}/openipIO/ 
		    ${OPENIP_LIB_INCLUDE_DIR}/openipML/ 
		    ${OPENIP_LIB_INCLUDE_DIR}/openipLL/)

AUX_SOURCE_DIRECTORY(src SRCVAR0)

ADD_EXECUTABLE(${PACKAGE_NAME} ${SRCVAR0})

TARGET_LINK_LIBRARIES(${PACKAGE_NAME} 
		    ${GSL_LIBRARIES} 
		    ${IMAGEIO_LIBS} 
		    openipDS
		    openipSC
		    openipIO
		    openipML
		    openipLL)

INSTALL(TARGETS ${PACKAGE_NAME} DESTINATION bin)
		    
SET(CMAKE_VERBOSE_MAKEFILE on)
